[package]
name = "rs_utils"
version = "0.0.1"
authors = ["dev <dev@qiyutech.tech>"]
edition = "2018"
description = "奇遇科技 Rust 辅助工具"
license-file = "LICENSE"
homepage = "https://github.com/QiYuTechDev/rs_utils"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
logger = ["slog", "slog-async", "slog-json", "slog-term"]

[dependencies]
slog = { version = "2", optional = true }
slog-async = { version = "2", optional = true }
slog-json = { version = "2", optional = true }
slog-term = { version = "2", optional = true }
