[package]
name = "rs_utils"
version = "0.0.1"
authors = ["dev <dev@qiyutech.tech>"]
edition = "2018"
description = "奇遇科技 Rust 辅助工具"
license-file = "LICENSE"
homepage = "https://github.com/QiYuTechDev/rs_utils"


[features]
logger = ["slog", "slog-async", "slog-json", "slog-term"]

[dependencies]
# for logger
slog = { version = "2", optional = true }
slog-async = { version = "2", optional = true }
slog-json = { version = "2", optional = true }
slog-term = { version = "2", optional = true }

# for error handling
thiserror = "1.0"
anyhow = "1.0"
