[package]
name = "rs_utils"
version = "0.0.13"
authors = ["dev <dev@qiyutech.tech>"]
edition = "2018"
description = "奇遇科技 Rust 辅助工具"
license-file = "LICENSE"
homepage = "https://github.com/QiYuTechDev/rs_utils"


[features]
logger = ["slog", "slog-async", "slog-json", "slog-term"]
http_header = ["httparse", "url"]
iced_style = ["iced"]

[dependencies]
# for logger
slog = { version = "2.7", optional = true }
slog-async = { version = "2.6", optional = true }
slog-json = { version = "2.3", optional = true }
slog-term = { version = "2.6", optional = true }

httparse = { version = "1.3", optional = true }
url = { version = "2.1", optional = true }

iced = { version = "0.4", optional = true }

# for error handling
thiserror = "1.0"
anyhow = "1.0"
